@@ -1,6 +1,7 @@
 This file documents the revision history for Zucchini
 
 {{$NEXT}}
+    - disable badly written and unfinished rsync test
 
 0.0.18_01 2012-04-12 13:49:34 UTC
     - switch to Moo
